<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".Accounts">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_accounts"
        android:layout_marginTop="40sp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
         />


    <Button
        android:id="@+id/twitter_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/twitter_link_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="148dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:text="@string/facebook_link_text"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hidden_facebook_button"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="108dp"
        android:layout_marginTop="428dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton        android:id="@+id/addTwitter"
        android:layout_above="@id/addFacebook"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:visibility="gone"
        app:tint="#FFFFFF"
        app:backgroundTint="#FF3700B3"
        app:srcCompat="@drawable/twitter_bird_logo_2012_svg" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton        android:id="@+id/addFacebook"
        android:layout_above="@id/addaccount"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        app:tint="#FFFFFF"
        app:backgroundTint="#FF3700B3"
        android:visibility="gone"
        app:srcCompat="@drawable/facebookiconpreview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="#FFFFFF"
        app:backgroundTint="#FF3700B3"
   />


    <RelativeLayout
        android:layout_below="@id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/border_round"
        android:id="@+id/rlConnectedTwitterAccount">


        <ImageView
            android:id="@+id/imgTwitterIcon"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/twitter_bird_logo_2012_svg"
            />


        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/txtTwitterUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Twitter"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/disconnect_button"
            app:backgroundTint="#B71C1C" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/rlConnectedTwitterAccount"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/border_round"
        android:id="@+id/rlConnectedFacebookAccount">


        <ImageView
            android:id="@+id/imgFacebookIcon"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/facebook_icon"
            />


        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/txtFacebookUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Facebook"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/disconnect_button"
            app:backgroundTint="#B71C1C" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_refresh_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:text="Button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login_button_facebook"
        app:layout_constraintVertical_bias="0.0" />

</RelativeLayout>